fix missing semicolons & spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /*Major Modular Sixth Scale:http://www.modularscale.com/?22&px&1.667&web&text*/
 html{
     font-size: 1.375em; /*22px*/
-    line-height: 1.2em /*26px / 120*/
+    line-height: 1.2em; /*26px / 120*/
     height: 100%;
     background-color: #84a3cc;
   }
@@ -11,7 +11,7 @@ html{
   }
   h1{
     font-size: 1.667em; /*36.674px*/
-    line-height: 1.2em /*26px*/
+    line-height: 1.2em; /*26px*/
     font-family: "EB Garamond", "MVB Verdigris", serif;
     color: #022540;
     font-weight: 400;
@@ -30,7 +30,7 @@ html{
 
 .navbar {
   overflow: hidden;
-	bottom: 2em;
+  bottom: 2em;
 }
 
 .navbar a {
@@ -55,8 +55,7 @@ html{
   background-color: inherit;
   font-family: inherit;
   margin: .09em 0 0 .09em;
-	z-index: 2;
-
+  z-index: 2;
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn, .navbar a:active, .dropdown:active .dropbtn {
@@ -121,8 +120,8 @@ html{
     object-fit: contain;
   }
   #splashimg > img{
-		width:-webkit-fill-available;
-		position: absolute;
+    width:-webkit-fill-available;
+    position: absolute;
     top: 0px;
     filter:brightness(.8);
     margin-left: -20%;
